--- a/Enaza/Enaza/Enaza.csproj
+++ b/Enaza/Enaza/Enaza.csproj
@@ -5,5 +5,9 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
+    </ItemGroup>
+
 
 </Project>
