Исправлена строка подключения

--- a/Enaza/Enaza/appsettings.Development.json
+++ b/Enaza/Enaza/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DbConnection": "jdbc:jtds:sqlserver://./;instance=<pipe name>;namedPipe=true"
+    "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=DEVELOPMENT;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
